[gd_scene load_steps=8 format=2]

[ext_resource path="res://AubreyPro.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Script/Option_Control.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 1 )

[node name="Option_Control" type="Control"]
margin_right = 384.0
margin_bottom = 720.0
script = ExtResource( 2 )

[node name="Panel" type="Panel" parent="."]
modulate = Color( 0.866667, 0.184314, 0.537255, 0.72549 )
self_modulate = Color( 0.866667, 0.184314, 0.537255, 0.72549 )
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Button_Return" type="Button" parent="Panel"]
unique_name_in_owner = true
anchor_right = 0.031
anchor_bottom = 0.028
margin_left = 16.0
margin_top = 680.0
margin_right = 108.096
margin_bottom = 683.84
custom_fonts/font = SubResource( 7 )
text = "Назад"

[node name="Button_Save" type="Button" parent="Panel"]
unique_name_in_owner = true
anchor_right = 0.031
anchor_bottom = 0.028
margin_left = 264.0
margin_top = 680.0
margin_right = 356.096
margin_bottom = 683.84
custom_fonts/font = SubResource( 8 )
text = "Применить"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_right = 384.0
margin_bottom = 40.0

[node name="LB_Video" type="Label" parent="Panel/VBoxContainer"]
margin_right = 384.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "Видио"
align = 1

[node name="HSeparator" type="HSeparator" parent="Panel/VBoxContainer"]
margin_top = 69.0
margin_right = 384.0
margin_bottom = 73.0

[node name="MarginContainer" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 77.0
margin_right = 384.0
margin_bottom = 144.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/MarginContainer"]
margin_left = 20.0
margin_right = 384.0
margin_bottom = 67.0

[node name="ResolutionContainer" type="HBoxContainer" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 364.0
margin_bottom = 33.0

[node name="LB_Resolution" type="Label" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/ResolutionContainer"]
margin_right = 175.0
margin_bottom = 33.0
custom_fonts/font = SubResource( 6 )
text = "Разрешение"

[node name="Option_Resolution" type="OptionButton" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer/ResolutionContainer"]
margin_left = 179.0
margin_right = 208.0
margin_bottom = 33.0

[node name="CB_FS" type="CheckBox" parent="Panel/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 37.0
margin_right = 364.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 5 )
text = "во весь экран"

[connection signal="toggled" from="Panel/VBoxContainer/MarginContainer/VBoxContainer/CB_FS" to="." method="_on_CB_FS_toggled"]
